@@ -50,6 +50,7 @@ Changes from 4.3.x -> 4.4-alpha
 * xymonnet: keep the services db open during entire run
 * xymond_history: rewrite file write section using posix instead of C
 * xymond_rrd: don't restat files and dirs on each message; only re-create on error
+* xymond_rrd: don't create a cachectl socket if we're not writing RRD files and/or not caching
 
 
 Changes from 4.3.22 -> 4.3.23 (12 Nov 2015)
